--- a/css/home.css
+++ b/css/home.css
@@ -77,7 +77,6 @@
 
 
 
-
 .navbar-nav > li > a{
     color: #000000;
     margin: 0 16px;
@@ -494,3 +493,14 @@ ul.menu-item li {
 }
 
 /* media query section */
+
+@media only screen and (max-width: 767px) {
+    .home-menu > ul > li > a {
+        padding: 10px;
+    }
+
+    .home-menu > ul > li:nth-child(1) {
+        margin-top: 15px;
+    }
+
+}
